2010-04-28  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * doc/geany.txt, doc/geany.html:
   Add Folding section link to filetypes.common custom settings.


2010-04-27  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/callbacks.c:
   When switching documents, don't call document_set_text_changed()
   as this does much more than necessary. Instead call the necessary
   UI update functions explicitly.


2010-04-27  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * tagmanager/vstring.c:
   Fix invalid memory read (patch by Colomban Wendling, thanks).


2010-04-25  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/build.c, src/dialogs.c, src/msgwindow.c, src/ui_utils.c:
   Replace g_vsnprintf() by g_strdup_vprintf() to avoid truncated
   strings in case of reaching the buffer size limit (part of #2979697).
 * src/win32.c:
   Change the limit for the command line length when executing commands
   to a maximum of 32768 characters (closes #2979697).
   Fix broken opening URLs e.g. when using the 'builtin' Run command.
 * tagmanager/ctags.c:
   Change eFree() to simply ignore NULL pointers instead of asserting.
 * src/main.c:
   Remove malloc() fallback since we completely rely on g_malloc()
   nowadays.
 * plugins/export.c, plugins/filebrowser.c, plugins/htmlchars.c,
   plugins/saveactions.c:
   Make string arguments const where appropriate (patch by
   Colomban Wendling, thanks).
 * src/build.c, src/build.h, src/callbacks.c, src/editor.c,
   src/encodings.c, src/encodings.h, src/gb.c, src/geanyentryaction.c,
   src/geanymenubuttonaction.c, src/geanyobject.c, src/geanywraplabel.c,
   src/keyfile.c, src/project.c, src/sidebar.c, src/socket.c,
   src/symbols.c, src/templates.c, src/ui_utils.c:
   Make string arguments const where appropriate (patch by
   Colomban Wendling, thanks).


2010-04-22  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/plugindata.h, src/pluginutils.c, src/pluginutils.h, THANKS: