@@ -6,7 +6,7 @@
 <meta name="generator" content="Docutils 0.4: http://docutils.sourceforge.net/" />
 <title>Geany</title>
 <meta name="authors" content="Enrico Tröger  Nick Treleaven  Frank Lanitz" />
-<meta name="date" content="2010-04-22" />
+<meta name="date" content="2010-04-28" />
 <style type="text/css">
 
 /*
@@ -139,7 +139,7 @@ Stylesheet for Geany's documentation based on a version of John Gabriele.
 <br />Nick Treleaven
 <br />Frank Lanitz</td></tr>
 <tr><th class="docinfo-name">Date:</th>
-<td>2010-04-22</td></tr>
+<td>2010-04-28</td></tr>
 <tr><th class="docinfo-name">Version:</th>
 <td>0.19</td></tr>
 </tbody>
@@ -2204,10 +2204,6 @@ support</em> in some other editors.</p>
 <dt>Width</dt>
 <dd>The width of a single indent size in spaces. By default the indent
 size is equivalent to 4 spaces.</dd>
-<dt>Hard tab width</dt>
-<dd>When the <em>Tabs and Spaces</em> indent type is enabled, this is the
-display size of a tab. Otherwise this is ignored. Although
-configurable, this should usually be set to 8.</dd>
 <dt>Detect from file</dt>
 <dd>Try to detect and set the indent type based on file content, when
 a file is opened.</dd>
@@ -6012,7 +6008,7 @@ USE OR PERFORMANCE OF THIS SOFTWARE.</p>
 <div class="footer">
 <hr class="footer" />
 <a class="reference" href="geany.txt">View document source</a>.
-Generated on: 2010-04-28 12:47 UTC.
+Generated on: 2010-04-28 13:05 UTC.
 Generated by <a class="reference" href="http://docutils.sourceforge.net/">Docutils</a> from <a class="reference" href="http://docutils.sourceforge.net/rst.html">reStructuredText</a> source.
 
 </div>
