@@ -144,8 +144,6 @@ static void init_pref_groups(void)
 		"use_tab_to_indent", TRUE, "check_tab_key_indents");
 	stash_group_add_spin_button_integer(group, &editor_prefs.indentation->width,
 		"pref_editor_tab_width", 4, "spin_indent_width");
-	stash_group_add_spin_button_integer(group, &editor_prefs.indentation->hard_tab_width,
-		"indent_hard_tab_width", 8, "spin_tab_width");
 	stash_group_add_combo_box(group, (gint*)(void*)&editor_prefs.indentation->auto_indent_mode,
 		"indent_mode", GEANY_AUTOINDENT_CURRENTCHARS, "combo_auto_indent_mode");
 	stash_group_add_radio_buttons(group, (gint*)(void*)&editor_prefs.indentation->type,
@@ -180,6 +178,7 @@ static void init_pref_groups(void)
 	group = stash_group_new(PACKAGE);
 	configuration_add_pref_group(group, FALSE);
 	stash_group_set_write_once(group, TRUE);
+
 	stash_group_add_boolean(group, &editor_prefs.show_scrollbars,
 		"show_editor_scrollbars", TRUE);
 	stash_group_add_boolean(group, &editor_prefs.brace_match_ltgt,
@@ -194,6 +193,9 @@ static void init_pref_groups(void)
 		"allow_always_save", FALSE);
 	stash_group_add_boolean(group, &file_prefs.use_safe_file_saving,
 		"use_safe_file_saving", FALSE);
+	/* for backwards-compatibility */
+	stash_group_add_integer(group, &editor_prefs.indentation->hard_tab_width,
+		"indent_hard_tab_width", 8);
 }
 
 
